--- a/src/app/shared/session-layout/session-layout.component.html
+++ b/src/app/shared/session-layout/session-layout.component.html
@@ -8,7 +8,9 @@
 -->
 
 <div>
-
+  <!-- Page header -->
+  <app-header></app-header>
+  
   <!-- Main page content -->
   <main>
     <router-outlet></router-outlet>
