--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,12 @@
 */
 
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+  width: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
