second push for password-recovery page

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -7,9 +7,12 @@
 ;===========================================
 */ -->
 
-<div  fxLayoutAlign='center'>
+<div *ngIf='hasSubmitted === false' fxLayoutAlign='center'>
     <mat-card>
         <h2>Please Enter Your Username:</h2>
+        <mat-card-content *ngIf='userError === true'>
+            <h6>{{ noUser }}</h6>
+        </mat-card-content>
         <form [formGroup]='forgotPassword' #forgottenPassword='ngForm' (ngSubmit)='onSubmit(forgotPassword.value)'>
             <mat-card-content>
                     <mat-form-field>
@@ -29,6 +32,74 @@
                     <button mat-raised-button color='accent' [disabled]='!forgottenPassword.valid' type='submit'>Submit</button>
                 </mat-card-actions>
             </mat-card-content>
+        </form>
+    </mat-card>
+</div>
+
+<div *ngIf='hasSubmitted === true && hasAnswered === false' fxLayoutAlign='center'>
+    <mat-card>
+        <h2>Please answer your security questions:</h2>
+        <mat-card-content *ngIf='errorMessage === true'>
+            <h6>{{ displayError }}</h6>
+        </mat-card-content>
+        <br/>
+        <mat-card-content>
+            <div *ngFor='let question of securityQuestions.questions'>
+                <mat-card-content>{{ question.question_id }}</mat-card-content>
+                <mat-form-field>
+                    <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer'>
+                </mat-form-field>
+                <mat-card-content>{{ question.question_id1 }}</mat-card-content>
+                <mat-form-field>
+                     <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer1'>
+                </mat-form-field>
+                <mat-card-content>{{ question.question_id2 }}</mat-card-content>
+                <mat-form-field>
+                    <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer2'>
+                </mat-form-field>
+            </div>
+        </mat-card-content>
+        <button mat-raised-button color='accent' (click)='checkAnswers()'>Submit Answers</button>
+    </mat-card>
+</div>
+
+<div *ngIf='hasAnswered === true' fxLayoutAlign='center'>
+    <mat-card>
+        <h2>Please Reset Your Password</h2>
+        <p>Passwords must contain 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</p>
+        <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onSubmit(forgotPassword.value)'>
+            <mat-card-content>
+                    <mat-form-field>
+                            <input matInput type='text' placeholder='enter your new password' formControlName='password' id='password'>
+                    </mat-form-field>
+
+                    <div class="error" *ngIf="
+                    resetPassword.get('password').invalid &&
+                    (resetPassword.get('password').touched ||
+                    resetPassword.get('password').dirty)
+                     ">
+                        <div *ngIf="resetPassword.get('password').hasError('required') && resetPassword.get('password').hasError('minlength')">
+                            *Password is required and must be a minimum of 8 characters.
+                        </div>
+                    </div>
+                    <mat-form-field>
+                            <input matInput type='text' placeholder='confirm password' formControlName='confirmPassword' id='confirmPassword'>
+                    </mat-form-field>
+
+                    <div class="error" *ngIf="
+                    resetPassword.get('confirmPassword').invalid &&
+                    (resetPassword.get('confirmPassword').touched ||
+                    resetPassword.get('confirmPassword').dirty)
+                    ">
+                        <div *ngIf="resetPassword.get('confirmPassword').hasError('required') && resetPassword.get('password').hasError('minlength')">
+                            *Please confirm you password.
+                        </div>
+                    </div>
+                    <div class='error' *ngIf='resetPassword.value.password !== resetPassword.value.confirmPassword'>
+                        *Passwords must match
+                    </div>
+            </mat-card-content>
+            <button mat-raised-button color='accent' [disabled]="!newPassword.valid">Reset Password</button>
         </form>
     </mat-card>
 </div>
