--- a/src/app/pages/forgot-password/forgot-password.component.css
+++ b/src/app/pages/forgot-password/forgot-password.component.css
@@ -9,15 +9,28 @@
 mat-card {
     margin-top: 100px;
     min-width: 25%;
+    max-width: 50%;
     text-align: center;
+}
+
+h6 {
+    color: red;
+}
+
+.error {
+    color: red;
 }
 
 mat-form-field {
     width: 90%
 }
 
+mat-card-content {
+    margin: 5px;
+}
+
 button {
     display: inline-block;
-    width: 25%;
+    min-width: 25%;
 }
 
