--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -19,7 +19,7 @@ h1 {
   width: 25%;
   border: 0.5em darkorchid;
   text-align: center;
-  margin-top: 150px;
+  margin-top: 100px;
 }
 
 mat-form-field {
@@ -28,6 +28,11 @@ mat-form-field {
 
 button {
   width: 75%;
+}
+
+a:hover {
+  cursor: pointer;
+  color: blue;
 }
 
 .error {
