--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -9,22 +9,23 @@
         aliquam.
         <br />
 
-        <img src="https://via.placeholder.com/150">
     </mat-card>
     <mat-card class="col">
+        <img src="/assets/images/circles.jpg" style=" width:50%">
+
         <br />
         <ul>
-            <li>
-                <h5>bobscomputershop@bcrs.com</h5>
-            </li>
-            <li>
-                <h5>1-555-555-9876</h5>
-            </li>
             <li>
                 <h5>1000 Galvin Rd S, </h5>
             </li>
             <li>
                 <h5> Bellevue, NE 68005 </h5>
+            </li>
+            <li>
+                <h5>1-555-555-9876</h5>
+            </li>
+            <li>
+                <h5>bobscomputershop@teamtaco.com</h5>
             </li>
 
         </ul>
