--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -37,12 +37,12 @@
 
     <mat-card class="example-card">
         <mat-card-title>
-            <h1>Team Taco</h1><br>
+            <h1>Bob's Story</h1><br>
         </mat-card-title>
         <mat-card-subtitle>
             <h5>Founded in 1989</h5>
         </mat-card-subtitle>
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="" style=" width:30%">
+        <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
         <mat-card-content>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore
