final push for forgot-password page

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -44,7 +44,7 @@
         </mat-card-content>
         <br/>
         <mat-card-content>
-            <div *ngFor='let question of securityQuestions.questions'>
+            <div *ngFor='let question of securityQuestions.result.security_questions'>
                 <mat-card-content>{{ question.question_id }}</mat-card-content>
                 <mat-form-field>
                     <input matInput type='text' placeholder='answer' [(ngModel)]='user_answer'>
@@ -67,10 +67,10 @@
     <mat-card>
         <h2>Please Reset Your Password</h2>
         <p>Passwords must contain 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</p>
-        <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onSubmit(forgotPassword.value)'>
+        <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onReset(resetPassword.value)'>
             <mat-card-content>
                     <mat-form-field>
-                            <input matInput type='text' placeholder='enter your new password' formControlName='password' id='password'>
+                            <input matInput type='text' placeholder='enter your new password' formControlName='password' [(ngModel)]='updatePassword' id='password'>
                     </mat-form-field>
 
                     <div class="error" *ngIf="
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <mat-form-field>
-                            <input matInput type='text' placeholder='confirm password' formControlName='confirmPassword' id='confirmPassword'>
+                            <input matInput type='text' placeholder='confirm password' formControlName='confirmPassword' [(ngModel)]='confirmNewPassword' id='confirmPassword'>
                     </mat-form-field>
 
                     <div class="error" *ngIf="
@@ -95,7 +95,7 @@
                             *Please confirm you password.
                         </div>
                     </div>
-                    <div class='error' *ngIf='resetPassword.value.password !== resetPassword.value.confirmPassword'>
+                    <div class='error' *ngIf='noPasswordMatch !== false'>
                         *Passwords must match
                     </div>
             </mat-card-content>
