--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -7,5 +7,12 @@
 ;===========================================
 -->
 
-<h1>404</h1>
-<h1>Page Not Found!</h1>
+<mat-card class="nfBox">
+    <mat-card-header>
+        <mat-card-title>404</mat-card-title>
+        <mat-card-subtitle>Page not found</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+        <button mat-raised-button color='accent' (click)="navHome()">Home</button>
+    </mat-card-actions>
+</mat-card>
