--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -66,7 +66,7 @@
 <div *ngIf='hasAnswered === true' fxLayoutAlign='center'>
     <mat-card>
         <h2>Please Reset Your Password</h2>
-        <p>Passwords must contain 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</p>
+        <p>Passwords must be 9 characters long, contain 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol.</p>
         <form [formGroup]='resetPassword' #newPassword='ngForm' (ngSubmit)='onReset(resetPassword.value)'>
             <mat-card-content>
                     <mat-form-field>
@@ -79,7 +79,7 @@
                     resetPassword.get('password').dirty)
                      ">
                         <div *ngIf="resetPassword.get('password').hasError('required') && resetPassword.get('password').hasError('minlength')">
-                            *Password is required and must be a minimum of 8 characters.
+                            *Password is required and must be a minimum of 9 characters.
                         </div>
                     </div>
                     <mat-form-field>
@@ -92,7 +92,7 @@
                     resetPassword.get('confirmPassword').dirty)
                     ">
                         <div *ngIf="resetPassword.get('confirmPassword').hasError('required') && resetPassword.get('password').hasError('minlength')">
-                            *Please confirm you password.
+                            *Please confirm your password.
                         </div>
                     </div>
                     <div class='error' *ngIf='noPasswordMatch !== false'>
