--- a/src/app/pages/user-management/user-management.component.css
+++ b/src/app/pages/user-management/user-management.component.css
@@ -11,7 +11,8 @@ mat-card{
     width: 95%;
     margin: auto;
     margin-top: 100px;
-    background-color: accent
+    background-color: accent;
+    text-align: center;
 }
 
 table{
