--- a/src/app/pages/internal-server-error/internal-server-error.component.html
+++ b/src/app/pages/internal-server-error/internal-server-error.component.html
@@ -1,6 +1,6 @@
 <!--
 ============================================
-; Title: WEB	450	Bob’s	Computer	Repair	Shop
+; Title: WEB 450 Bob’s Computer Repair Shop
 ; Author: Ethan Townsend, Lea Trueworthy, Natasha Whitmer, and Jason Sullenger
 ; Date: 17 October 2019
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
@@ -9,11 +9,11 @@
 <div fxLayoutAlign="center">
     <mat-card class="nfBox">
         <mat-card-header>
-            <mat-card-title>404</mat-card-title>
-            <mat-card-subtitle>Page not found</mat-card-subtitle>
+            <mat-card-title>500</mat-card-title>
+            <mat-card-subtitle>Something went wrong</mat-card-subtitle>
         </mat-card-header>
         <mat-card-actions>
-            <button mat-raised-button color='accent' (click)="navHome()">Home</button>
+            <button mat-raised-button color='accent' (click)="navHome()">Reload</button>
         </mat-card-actions>
     </mat-card>
 </div>
