--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,13 +1,10 @@
 <div class="row">
     <mat-card class="col">
-        <h1> Bob's Computer Repair Shop</h1>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Lorem ipsum dolor sit amet. Laboriosam similique debitis iste ratione nemo ea at corporis
-        aliquam laboriosam similique debitis iste ratione nemo ea at corporis.
-        Consectetur adipisicing elit. <br /> Ad omnis quae expedita ipsum nobis
-        praesentium velit animi minus amet perspiciatis laboriosam similique debitis iste ratione nemo ea at corporis
-        aliquam.
         <br />
+
+        <h2>We would love to hear from you!</h2>
+        <p>Not sure where happened to your computer? Don't remember that large crack on your phone screen? Luckily, our
+            team is here to help! Stop by the store or give us a call to see what we can do for you. </p> <br />
 
     </mat-card>
     <mat-card class="col">
