--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,4 +6,9 @@
 ; Description: End-to-end billing system for Bob's Computer - MEAN stack
 ;===========================================
 -->
-<h1>The Home Page works!</h1>
+
+<body>
+
+    <img src="/assets/images/bob-large.png">
+    <h1>Welcome!</h1>
+</body>
