--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -43,41 +43,40 @@
             <h5>Founded in 1989</h5>
         </mat-card-subtitle>
         <img src="/assets/images/gadgets.jpg" alt="" style=" width:35%">
-        <mat-card-content>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore
-                magna aliqua. Pellentesque sit amet porttitor eget dolor morbi. Suspendisse ultrices gravida dictum
-                fusce ut
-                placerat. Sed tempus urna et pharetra pharetra massa massa ultricies. Interdum posuere lorem ipsum
-                dolor.
-                Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Lectus quam id leo in vitae
-                turpis massa sed elementum. Parturient montes nascetur ridiculus mus mauris vitae ultricies leo. Nulla
-                at
-                volutpat
-                diam ut venenatis. Orci a scelerisque purus semper eget. Mauris pharetra et ultrices neque ornare aenean
-                euismod
-                elementum nisi. Urna cursus eget nunc scelerisque. Velit laoreet id donec ultrices. Neque viverra justo
-                nec
-                ultrices dui sapien eget mi proin. Id ornare arcu odio ut sem nulla. </p>
-            <br />
 
-            <p> Purus sit amet luctus venenatis lectus magna. Eu mi bibendum neque egestas congue quisque egestas.
-                Commodo
-                quis imperdiet massa tincidunt nunc pulvinar sapien. Vulputate dignissim suspendisse in est ante in
-                nibh.
-                Lectus
-                urna duis convallis convallis tellus id. Et pharetra pharetra massa massa ultricies mi quis. Tempus quam
-                pellentesque nec nam aliquam sem et tortor. Augue eget arcu dictum varius duis at consectetur lorem
-                donec.
-                Cursus in hac
-                habitasse platea. Nullam eget felis eget nunc lobortis mattis aliquam faucibus. Vestibulum lorem sed
-                risus
-                ultricies tristique nulla aliquet. Venenatis lectus magna fringilla urna porttitor. Facilisi cras
-                fermentum
-                odioeu feugiat. At lectus urna duis convallis convallis tellus. Leo vel orci porta non pulvinar neque.
-                Tempus
-                egestas sed sed risus pretium quam vulputate dignissim suspendisse. Enim diam vulputate ut pharetra sit
-                amet.
+        <h6>To best understand our family and where we began is a letter from my father, Peter to his father, Bob.
+            This is how our story begins:</h6>
+        <br />
+        <mat-card-content style="text-align: left">
+
+            <p> Dad,
+                <br />
+                <br>
+                I don't feel I was particularly honest as a child. I did get in trouble when I was younger more often
+                then I
+                would like to admit but that eventually allowed me to join you in your favorite hobby. I know you
+                brought me
+                along so I would stay out of trouble but watching you work on electronics really inspired me, even
+                though I
+                pretended I didn’t care. Over those years I grow to enjoy building, breaking, and tuckering with all
+                sorts
+                of electrons with you. Those really were some of best years of my life, so far.
+                <br />
+                <br>
+                As you know, I have been out of school long enough to know what I want to do with my life.
+                Now that I have grow and experienced some of the world, I am writing you this letter to ask an important
+                question. I want to ask you if you would join me by opening a computer repair store with me. Before you
+                answer, I do have a small condition. I would like to name the shop after you. You have inspired me and
+                encouraged me for as long as I can remember. Now I would like to make you proud (and mom, of course).
+                <br />
+                <br>
+                Hopefully this letter with arrive before I do but I know you will be proud of me regardless of what you
+                decide. I can’t wait to see you and mom and have some of delicious apple pie.
+                <br />
+                <br>
+                Your son,
+            </p>
+            <p style="color:#e7c661"> Peter <br />
             </p>
         </mat-card-content>
     </mat-card>
