--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,12 @@ html {
   height: 100%;
   width: 100%;
 }
-body {
+body, p {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Playfair Display SC', serif;
+
 }
