added link for user reg

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -50,6 +50,8 @@
         </mat-card-actions>
       </form>
       <a (click)="navRecovery()">Forgot your password?</a>
+      <br>
+      <a (click)="navRegister()">Create a new account!</a>
     </mat-card-content>
   </mat-card>
   <div></div>
